--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -8,47 +8,72 @@
     <div class="row">
         <section class="col-md-3">
             <h5 class="text-warning ml-3">Sorts</h5>
-            <select class="custom-select mb-3" name="" id="">
-                <option selected>Alphabetical</option>
-                <option value="">Price: Low to High</option>
-                <option value="">Price: High to Low</option>
+            <select class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
+                <option *ngFor="let sort of sortOptions"
+                    [value]="sort.value"
+                >
+                    {{ sort.name }}
+                </option>
             </select>
             
             <h5 class="text-warning ml-3">Brands</h5>
             <ul class="list-group my-3">
-                <li class="list-group-item active" aria-current="true">An active item</li>
-                <li class="list-group-item">A second item</li>
-                <li class="list-group-item">A third item</li>
-                <li class="list-group-item">A fourth item</li>
-                <li class="list-group-item">And a fifth one</li>
+                <li class="list-group-item " 
+                *ngFor="let brand of brands"
+                [class.active]="brand.id === this.shopParams.brandId"
+                [value]="brand.id"
+                (click)="onBrandSelected(brand.id)"
+                >
+                    {{brand.name}}
+                </li>
               </ul>
 
             <h5 class="text-warning ml-3">Types</h5>
             <ul class="list-group my-3">
-                <li class="list-group-item active" aria-current="true">An active item</li>
-                <li class="list-group-item">A second item</li>
-                <li class="list-group-item">A third item</li>
-                <li class="list-group-item">A fourth item</li>
-                <li class="list-group-item">And a fifth one</li>
+                <li class="list-group-item " 
+                *ngFor="let type of types"
+                [class.active]="type.id === this.shopParams.typeId"
+                [value]="type.id"
+                (click)="onTypeSelected(type.id)"
+                >
+                    {{type.name}}
+                </li>
               </ul>
 
         </section>
         <section class="col-md-9">
             <div class="d-flex justify-content-between align-items-center pb-2">
-                <header>
-                    <span>Showing <strong>10</strong> of <strong>16</strong> Results</span>
-                </header>
+                <!-- <header>
+                    <span>Showing 
+                        <strong>
+                            {{(this.shopParams.pageNumber)*(this.shopParams.pageSize)}} -
+                            {{this.shopParams.pageNumber*this.shopParams.pageSize}}
+                        </strong> 
+                        of <strong>{{this.totalCount}}</strong> Results</span>
+                </header> -->
                 <div class="form-inline mt-2">
-                    <input class="form-control mr-2" style="width: 300px;" placeholder="Search" type="text">
-                    <button class="btn btn-outline-primary my-2">Search</button>
-                    <button class="btn btn-outline-success ml-2 my-2">Reset</button>
+                    <input (keyup)="onSearch()" class="form-control mr-2" #search style="width: 300px;" placeholder="Search" type="text">
+                    <button (click)="onSearch()" class="btn btn-outline-primary my-2">Search</button>
+                    <button (click)="onReset()" class="btn btn-outline-success ml-2 my-2">Reset</button>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-4 mb-4" *ngFor="let item of products">
+                <!-- <div *ngIf="sortSelected === 'priceDesc' && item.price >= 200"> -->
                    <app-product-item [product]="item"></app-product-item> 
+                <!-- </div> -->
                 </div>
+            </div>
+            <div class="d-flex justify-content-center ">
+                <pagination 
+                [boundaryLinks]="true" 
+                [totalItems]="this.totalCount"
+                (pageChanged)="onPageChanged($event)"
+                [itemsPerPage]="this.shopParams.pageSize"
+                previousText="&lsaquo;" 
+                nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
+                </pagination>
             </div>
         </section>
     </div>
