--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -3,9 +3,59 @@
         {{ item.name }}
     </li>
 </ul> -->
+<div class="container">
+    <div class="row">
+        <div class="col md-3"
+                *ngFor="let brand of brands"
+                [class.active]="brand.id === this.shopParams.brandId"
+                [value]="brand.id"
+                (click)="onBrandSelected(brand.id)"
+        >
+            <article _ngcontent-yfi-c52="" class="category__profile">
+                <span>
+                    {{ brand.name }}
+                </span>
+            </article>
+        </div>
+        
+    </div>
+</div>
 
 <div class="container">
     <div class="row">
+        <!-- <div>
+        <article class="leaderboard">
+            <header>
+              
+            </header>
+            
+            <main class="leaderboard__profiles">
+              <article class="leaderboard__profile">
+                <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Mark Zuckerberg" class="leaderboard__picture">
+                <span class="leaderboard__name">Mark Zuckerberg</span>
+              </article>
+              
+              <article class="leaderboard__profile">
+                <img src="https://randomuser.me/api/portraits/men/97.jpg" alt="Dustin Moskovitz" class="leaderboard__picture">
+                <span class="leaderboard__name">Dustin Moskovitz</span>
+                <span class="leaderboard__value">9.9<span>B</span></span>
+              </article>
+              
+              <article class="leaderboard__profile">
+                <img src="https://randomuser.me/api/portraits/women/17.jpg" alt="Elizabeth Holmes" class="leaderboard__picture">
+                <span class="leaderboard__name">Elizabeth Holmes</span>
+                <span class="leaderboard__value">4.5<span>B</span></span>
+              </article>
+              
+              <article class="leaderboard__profile">
+                <img src="https://randomuser.me/api/portraits/men/37.jpg" alt="Evan Spiegel" class="leaderboard__picture">
+                <span class="leaderboard__name">Evan Spiegel</span>
+                <span class="leaderboard__value">2.1<span>B</span></span>
+              </article>
+            </main>
+        </article>
+        </div> -->
+
         <section class="col-md-3">
             <h5 class="text-warning ml-3">Sorts</h5>
             <select class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
