--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -93,14 +93,13 @@
         </section>
         <section class="col-md-9">
             <div class="d-flex justify-content-between align-items-center pb-2">
-                <!-- <header>
-                    <span>Showing 
-                        <strong>
-                            {{(this.shopParams.pageNumber)*(this.shopParams.pageSize)}} -
-                            {{this.shopParams.pageNumber*this.shopParams.pageSize}}
-                        </strong> 
-                        of <strong>{{this.totalCount}}</strong> Results</span>
-                </header> -->
+                <app-paging-header
+                [totalCount]="totalCount"
+                [pageNumber]="this.shopParams.pageNumber"
+                [pageSize]="this.shopParams.pageSize"
+                >
+            </app-paging-header>
+
                 <div class="form-inline mt-2">
                     <input (keyup)="onSearch()" class="form-control mr-2" #search style="width: 300px;" placeholder="Search" type="text">
                     <button (click)="onSearch()" class="btn btn-outline-primary my-2">Search</button>
@@ -115,15 +114,13 @@
                 <!-- </div> -->
                 </div>
             </div>
-            <div class="d-flex justify-content-center ">
-                <pagination 
-                [boundaryLinks]="true" 
-                [totalItems]="this.totalCount"
+            <div class="d-flex justify-content-center " *ngIf="totalCount > 0">
+                <app-pager
+                [pageSize]="this.shopParams.pageSize"
+                [totalCount]="totalCount"
                 (pageChanged)="onPageChanged($event)"
-                [itemsPerPage]="this.shopParams.pageSize"
-                previousText="&lsaquo;" 
-                nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
-                </pagination>
+                >
+                </app-pager>
             </div>
         </section>
     </div>
