--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-nav-bar></app-nav-bar>
 <div class="container" style="margin-top: 140px;">
-    <h1>wlecome {{ title }}</h1>
-    <app-shop></app-shop>
-    
+    <!-- <h1>wlecome {{ title }}</h1> -->
+    <router-outlet></router-outlet>
 </div>
