--- a/src/app/core/nav-bar/nav-bar.component.scss
+++ b/src/app/core/nav-bar/nav-bar.component.scss
@@ -11,3 +11,12 @@
     top: -12px;
     right: 32px;
 }
+
+a{
+    text-decoration: none;
+    color: #343a40;
+
+    &.active{
+        color: orange;
+    }
+}
