--- a/src/app/shop/product-item/product-item.component.html
+++ b/src/app/shop/product-item/product-item.component.html
@@ -2,7 +2,7 @@
   <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="img-fluid bg-success">
 
   <div class="card-body d-flex flex-column">
-      <a href="#">
+      <a routerLink="/shop/{{product.id}}">
           <p class="text-uppercase">{{product.name}}</p>
       </a>
       <span class="mb-2">{{product.price | currency}}</span>
@@ -10,9 +10,9 @@
     
       <div class="btn-group mt-auto">
         <button type="button" class="btn  btn-outline-secondary fa fa-shopping-cart mr-2"></button>
-        <button type="button" class="btn  btn-outline-secondary">View</button>
+        <button routerLink="/shop/{{product.id}}" routerLinkActive="router-link-active"  type="button" class="btn  btn-outline-secondary">View</button>
       </div>
-      <small class="text-muted">9 mins</small>
+      
     
   </div>
 </div>
