--- a/src/app/core/nav-bar/nav-bar.component.html
+++ b/src/app/core/nav-bar/nav-bar.component.html
@@ -7,6 +7,7 @@ px-md-4 mb-3 bg-white border-bottom shadow-sm">
       [routerLinkActiveOptions]="{exact: true}">Home</a>
       <a class="p-2" [routerLink]="['/shop']" routerLinkActive="active">Shop</a>
       <a class="p-2" href="#">Contact</a>
+      <a class="p-2" routerLink="/test-error" routerLinkActive="active">Errors</a>
       
     </nav>
     <div class="d-flex align-items-center">
