--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,16 @@
-<p>home works!</p>
+<carousel>
+    <slide>
+        <img src="../../assets/images/hero1.jpg" style="display: block; width:100%" alt="">
+    </slide>
+    <slide>
+        <img src="../../assets/images/hero2.jpg" style="display: block; width:100%" alt="">
+    </slide>
+    <slide>
+        <img src="../../assets/images/hero3.jpg" style="display: block; width:100%" alt="">
+    </slide>
+</carousel>
+<div class="featured">
+    <div class="d-flex justify-content-center pt-4">
+        <h1>welcome to the shop</h1>
+    </div>
+</div>
