--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -57,39 +57,40 @@
         </div> -->
 
         <section class="col-md-3">
-            <h5 class="text-warning ml-3">Sorts</h5>
-            <select class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
-                <option *ngFor="let sort of sortOptions"
-                    [value]="sort.value"
-                >
-                    {{ sort.name }}
-                </option>
-            </select>
-            
-            <h5 class="text-warning ml-3">Brands</h5>
-            <ul class="list-group my-3">
-                <li class="list-group-item " 
-                *ngFor="let brand of brands"
-                [class.active]="brand.id === this.shopParams.brandId"
-                [value]="brand.id"
-                (click)="onBrandSelected(brand.id)"
-                >
-                    {{brand.name}}
-                </li>
-              </ul>
+            <ng-container *ngIf="brands && types" >
+                <h5 class="text-warning ml-3">Sorts</h5>
+                <select class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
+                    <option *ngFor="let sort of sortOptions"
+                        [value]="sort.value"
+                    >
+                        {{ sort.name }}
+                    </option>
+                </select>
+                
+                <h5 class="text-warning ml-3">Brands</h5>
+                <ul class="list-group my-3">
+                    <li class="list-group-item " 
+                    *ngFor="let brand of brands"
+                    [class.active]="brand.id === this.shopParams.brandId"
+                    [value]="brand.id"
+                    (click)="onBrandSelected(brand.id)"
+                    >
+                        {{brand.name}}
+                    </li>
+                </ul>
 
-            <h5 class="text-warning ml-3">Types</h5>
-            <ul class="list-group my-3">
-                <li class="list-group-item " 
-                *ngFor="let type of types"
-                [class.active]="type.id === this.shopParams.typeId"
-                [value]="type.id"
-                (click)="onTypeSelected(type.id)"
-                >
-                    {{type.name}}
-                </li>
-              </ul>
-
+                <h5 class="text-warning ml-3">Types</h5>
+                <ul class="list-group my-3">
+                    <li class="list-group-item " 
+                    *ngFor="let type of types"
+                    [class.active]="type.id === this.shopParams.typeId"
+                    [value]="type.id"
+                    (click)="onTypeSelected(type.id)"
+                    >
+                        {{type.name}}
+                    </li>
+                </ul>
+            </ng-container>
         </section>
         <section class="col-md-9">
             <div class="d-flex justify-content-between align-items-center pb-2">
